--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abuh's Portfolio Website</title>
+    <title>My Portfolio.</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <!-- GOOGLE FONT (MONTSERRAT)-->
     <link
